<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Duffl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_image">Splash Image</string>
    <string name="sign_in">Sign In</string>
    <string name="tete_a_rent">Duffl</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="or_log_in_with">Or Log In with</string>
    <string name="image_descriptor">Image descriptor</string>
    <string name="take_the_clear_snap_of_the_item_you_are_selling_n_this_is_the_first_picture_shoppers_will_see_so_make_sure_you_capture_it_from_top_to_bottom_">Take the clear snap of the item you are selling.\n This is the first picture shoppers will see so make sure you capture it from top to bottom.</string>
    <string name="feed">FEED</string>
    <string name="explore">EXPLORE</string>
    <string name="sell">SELL</string>
    <string name="activity">ACTIVITY</string>
    <string name="my_closet">MY CLOSET</string>
    <string name="image">Image</string>
    <string name="btn_reconnect_title">Try again</string>
    <string name="alert_conn_err_title">Network Error</string>
    <string name="alert_network_error_message">The network is temporarily unavailable.</string>
    <string name="btn_support_title">Email Support</string>
    <string name="server_error_msg">Oops, TeteARent server is not working.</string>
    <string name="list_item_for_sale">LIST ITEM FOR SALE</string>
    <string name="cancellations_and_returns">Cancellations and returns</string>
    <string name="weight_in_gms_">Weight (in gms)</string>
    <string name="how_many_items_you_wanted_to_sell">How many items you wanted to sell</string>
    <string name="security_amount">Security amount</string>
    <string name="security_deposit_comment">Security deposit comment</string>
    <string name="price_per_week">Price per week</string>
    <string name="orginal_price">Orginal price</string>
    <string name="selling_price">Selling price</string>
    <string name="lend">LEND</string>
    <string name="what_do_you_want_to_do_">What do you want to do?</string>
    <string name="description">Description</string>
    <string name="add_upto_seven_tags_that_are_relevant_to_your_item">Add upto seven tags that are relevant to your item</string>
    <string name="write_a_catchy_title">Write a catchy title</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="does_the_item_have_any_signs_of_wear">Does the item have any signs of wear</string>
    <string name="new_with_retail_tags">NEW WITH RETAIL TAGS</string>
    <string name="never_worn_but_with_tags">NEVER WORN BUT WITH TAGS</string>
    <string name="like_new">LIKE NEW</string>
    <string name="gently_used">GENTLY USED</string>
    <string name="select_the_item_condition">Select the item condition</string>
    <string name="year_purchased_made">Year Purchased/Made</string>
    <string name="required">required</string>
    <string name="color">Color</string>
    <string name="designer">Designer</string>
    <string name="style">Style</string>
    <string name="item_type">Item Type</string>
    <string name="footwear_bags_and_accessories">Footwear, Bags and Accessories</string>
    <string name="wedding">Wedding</string>
    <string name="apparel">Apparel</string>
    <string name="select_a_category">Select a category</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_a_relevant_size">Select a relevant size</string>

    <string name="facebook_app_id">468709069955350</string>

    <string name="price_">"Price: "</string>

    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="email">Email</string>

    <string name="new_user">New User</string>

    <string name="mobile_number">Mobile Number</string>

    <string name="register">Register</string>

    <string name="edit_profile">Edit profile</string>

    <string name="update">Update</string>

    <string name="locality">Locality</string>

    <string name="style_bio">Style BIO</string>

    <string name="followers">followers</string>

    <string name="following">following</string>

    <string name="items">items</string>

    <string name="items_for_sale">ITEMS FOR SALE</string>

    <string name="_list_another_item">+LIST ANOTHER ITEM</string>

    <string name="your_invite_code">YOUR INVITE CODE</string>

    <string name="invite_and_earn_u20b9400_for_every_friend_who_installs_app_and_signs_up_with_your_referral_code_your_friend_get_u20b9500_">Invite and earn \u20B9 400 for every friend who installs app and signs up with your referral code. Your friend get \u20B9 500.</string>

    <string name="invite_friends">INVITE FRIENDS</string>
    
</resources>