<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tetearent2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/red_bg"
    android:focusableInTouchMode="true">
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:focusableInTouchMode="true">
	
	    <TextView 
	        android:id="@+id/txt1"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:singleLine="true"
	    	android:layout_gravity="center_horizontal"
	    	android:text="@string/sign_in"
	    	android:textSize="32sp"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="20dp"/>
	    
	    <TextView 
	        android:id="@+id/txt2"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:singleLine="true"
	    	android:layout_gravity="center_horizontal"
	    	android:text="@string/tete_a_rent"
	    	android:textSize="22sp"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="5dp"/>

	    <android.support.design.widget.TextInputLayout
	        android:id="@+id/wrapEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/TextInputStyle">

            <android.support.v7.widget.AppCompatEditText
		        android:id="@+id/emailaddress"
	            android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:singleLine="true"
		    	android:inputType="textEmailAddress"
		   		android:hint="@string/username"/>
            
		</android.support.design.widget.TextInputLayout>
	    	    
		<android.support.design.widget.TextInputLayout
		    android:id="@+id/wrapPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@style/TextInputStyle">

            <android.support.v7.widget.AppCompatEditText
		        android:id="@+id/password"
	            android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:singleLine="true"
		    	android:inputType="textPassword"
		   		android:hint="@string/password"/>
            
		</android.support.design.widget.TextInputLayout>
	    
  	    <Button 
	        android:id="@+id/loginbtn"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/login"
	    	android:background="@drawable/button_selector"
	    	android:textColor="@color/white"
	    	android:padding="10dp"
	    	android:textSize="20sp"
	    	android:layout_marginTop="10dp"/>
  	    
  	    <Button 
	        android:id="@+id/registerbtn"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:text="@string/new_user"
	    	android:background="@drawable/button_selector"
	    	android:textColor="@color/white"
	    	android:padding="10dp"
	    	android:textSize="20sp"
	    	android:layout_marginTop="10dp"/>
	    
	    <!-- <Button 
	        android:id="@+id/forgotpwd"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:singleLine="true"
	    	android:layout_gravity="center_horizontal"
	    	android:text="@string/forgot_password_"
	    	android:textSize="20sp"
	    	android:background="@android:color/transparent"
	    	android:textColor="@color/white"
	    	android:layout_marginTop="20dp"/> -->
	    
	    <LinearLayout 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_gravity="center_horizontal"
	    	android:layout_marginTop="30dp">
	        
	        <View 
	            android:layout_width="60dp"
	    		android:layout_height="1.5dp"
	    		android:background="@color/white"
	    		android:layout_gravity="center_vertical"
	    		android:layout_marginRight="10dp"/>
	        
	        <TextView 
		        android:id="@+id/txt3"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:singleLine="true"
		    	android:layout_gravity="center_horizontal"
		    	android:text="@string/or_log_in_with"
		    	android:textSize="20sp"
		    	android:textColor="@color/white"/>
	        
	        <View 
	            android:layout_width="60dp"
	    		android:layout_height="1.5dp"
	    		android:background="@color/white"
	    		android:layout_gravity="center_vertical"
	    		android:layout_marginLeft="10dp"/>
	        
	    </LinearLayout>
	    
	    <Button 
	        android:id="@+id/fblogin"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/fb_button"
	    	android:layout_marginTop="15dp"/>
	    
	    <!-- <com.facebook.login.widget.LoginButton
	        android:id="@+id/login_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        facebook:com_facebook_confirm_logout="false"
            facebook:com_facebook_tooltip_mode="never_display"/> -->
	    	    
	</LinearLayout>
    
</ScrollView>
    
    