<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.tetearent2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardElevation="3dp"
        card_view:cardCornerRadius="2dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/invite_and_earn_u20b9400_for_every_friend_who_installs_app_and_signs_up_with_your_referral_code_your_friend_get_u20b9500_" />
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_invite_code"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black" 
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/referralCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="GCD2EB2"
        android:textColor="@android:color/darker_gray"
        android:textSize="26sp" 
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:textColor="@android:color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"/>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</LinearLayout>