<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Edit profile" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/red_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wrapFname"
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1" >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"
                        android:nextFocusDown="@+id/EditText01"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wrapLname"
                    style="@style/TextInputStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1" >

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/EditText01"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapLocality"
                style="@style/TextInputStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editLocality"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locality"
                    android:inputType="textCapSentences"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapBio"
                style="@style/TextInputStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editBio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/style_bio"
                    android:inputType="textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:padding="10dip"
                android:text="@string/update" 
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    
    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        layout="@layout/include_progress" 
        android:layout_gravity="center"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>